Closed Bug 1597420 Opened 6 years ago Closed 5 years ago

Fix uses of nsDOMNavigationTiming::IsTopLevelContentDocumentInContentProcess in dom/base/nsDOMNavigationTiming.cpp

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla73
Fission Milestone M6
Tracking Status
firefox73 --- fixed

People

(Reporter: djvj, Assigned: evilpies)

References

(Blocks 1 open bug)

Details

(Whiteboard: [rm-docshell-tree-item:simple])

Attachments

(1 file)

In file dom/base/nsDOMNavigationTiming.cpp

Uses DocShellTree to get root item and check it against mDocShell to check if it is root.

Also checks ItemType.

Change to use BrowsingContext.

Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).

Fission Milestone: --- → M6
Priority: -- → P3
Assignee: nobody → evilpies
Pushed by evilpies@gmail.com: https://hg.mozilla.org/integration/autoland/rev/bb5a4bc0cbb4 Remove nsIDocShellTreeItem from nsDOMNavigationTiming. r=kmag
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: