Bug 1597420 - Remove nsIDocShellTreeItem from nsDOMNavigationTiming. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D57372